[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/menus/options/Options.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/options/OptionsVideo.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/options/OptionsAudio.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/menus/options/OptionsGame.tscn" type="PackedScene" id=7]

[node name="Options" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
enable_quit_game = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="OptionsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 560.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "title_options"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 38.0

[node name="MenusList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 142.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoOptions" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "title_video"

[node name="AudioOptions" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList"]
margin_top = 35.0
margin_right = 200.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 30 )
text = "title_sound"

[node name="GameOptions" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 30 )
text = "title_game"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList"]
margin_top = 146.0
margin_right = 200.0
margin_bottom = 186.0
rect_min_size = Vector2( 0, 40 )

[node name="ActionsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList"]
margin_top = 190.0
margin_right = 200.0
margin_bottom = 560.0
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 2

[node name="SaveGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList"]
visible = false
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "btn_save_game"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList"]
visible = false
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "btn_close"

[node name="ReturnMainMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList"]
visible = false
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "btn_return_main_menu"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList"]
visible = false
margin_top = 340.0
margin_right = 200.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 30 )
text = "btn_quit_game"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 208.0
margin_bottom = 560.0

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3

[node name="OptionsContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer"]
margin_right = 772.0
margin_bottom = 536.0
size_flags_vertical = 3

[node name="OptionsVideo" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/OptionsContainer" instance=ExtResource( 5 )]
margin_right = 772.0
margin_bottom = 536.0

[node name="OptionsAudio" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/OptionsContainer" instance=ExtResource( 6 )]
visible = false
margin_right = 772.0
margin_bottom = 536.0

[node name="OptionsGame" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/OptionsContainer" instance=ExtResource( 7 )]
visible = false
margin_right = 772.0
margin_bottom = 536.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer"]
margin_top = 540.0
margin_right = 772.0
margin_bottom = 560.0
size_flags_horizontal = 3
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3"]
margin_left = 384.0
margin_right = 464.0
margin_bottom = 20.0
text = "btn_cancel"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3"]
margin_left = 468.0
margin_right = 618.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
text = "btn_apply"

[node name="ApplySaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3"]
margin_left = 622.0
margin_right = 772.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
text = "btn_save_apply"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList/VideoOptions" to="." method="_on_VideoOptions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList/AudioOptions" to="." method="_on_AudioOptions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/MenusList/GameOptions" to="." method="_on_GameOptions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList/ReturnMainMenu" to="." method="_on_ReturnMainMenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsList/ActionsList/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OptionsContainer/HBoxContainer3/ApplySaveButton" to="." method="_on_ApplySaveButton_pressed"]
